--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,39 @@
 /* Variables Import */
-@import './_variables.css';
+@import "./_variables.css";
 
 /* Font */
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
+
+/* Container */
+.container {
+  width: 90;
+  justify-content: center;
+}
+
+@media only screen(max-width:768px) {
+  .container {
+    width: 100%;
+  }
+}
+
+/* Hero Section Style */
+.hero {
+  background-color: #2d25a0;
+  height: 600px;
+  align-items: center;
+  padding: 0 150px;
+  flex-wrap: wrap;
+}
+
+.hero h1 {
+  color: white;
+  width: 85%;
+}
+
+.hero button {
+  margin-top: 35px;
+}
+
+.hero img {
+  width: 100%;
+}
