--- a/css/style.css
+++ b/css/style.css
@@ -6,8 +6,8 @@
 
 /* Container */
 .container {
-  width: 90;
-  justify-content: center;
+  width: 90%;
+  align-items: center;
 }
 
 @media only screen(max-width:768px) {
@@ -25,6 +25,11 @@
   flex-wrap: wrap;
 }
 
+.hero:hover img {
+  transform: translateX(20px);
+  transition: transform 500ms ease;
+}
+
 .hero h1 {
   color: white;
   width: 85%;
@@ -35,5 +40,28 @@
 }
 
 .hero img {
+  width: 100%;
+}
+
+/* Players Section Style */
+
+.players {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  margin-top: 70px;
+  gap: 30px;
+}
+
+.player {
+  width: 310px;
+  padding: 15px;
+  box-shadow: 0px 0px 40px rgba(0, 0, 0, 0.15);
+}
+
+.player h3 {
+  margin-bottom: 10px;
+}
+
+.player .img img {
   width: 100%;
 }
