--- a/css/style.css
+++ b/css/style.css
@@ -65,3 +65,32 @@
 .player .img img {
   width: 100%;
 }
+
+/* Footer Styles */
+
+footer {
+  display: flex;
+  align-items: center;
+  margin-top: 150px;
+  flex-direction: column;
+  margin-bottom: 60px;
+}
+
+.footer-img img {
+  width: 483.87px;
+  height: 110px;
+  left: 0px;
+  top: 0px;
+}
+
+.footer-details .icons i {
+  background-color: #e7e7e8;
+  color: #969bab;
+  padding: 10px;
+  border-radius: 50%;
+  margin-bottom: 20px;
+}
+
+.copyright span {
+  font-size: 18px;
+}
