--- a/css/_variables.css
+++ b/css/_variables.css
@@ -8,10 +8,10 @@
 }
 
 /* Utilities */
-
-main {
-  display: flex;
-  flex-direction: column;
+hr {
+  height: 2px;
+  background-color: white;
+  margin-bottom: 20px;
 }
 
 h1 {
