--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,20 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
 
 /* Container */
-.container {
-  width: 90%;
+main {
+  display: flex;
+  flex-direction: column;
   align-items: center;
 }
 
-@media only screen(max-width:768px) {
+.container {
+  width: 70%;
+}
+@media only screen and (max-width: 992px) {
   .container {
     width: 100%;
   }
 }
-
 /* Hero Section Style */
 .hero {
   background-color: #2d25a0;
@@ -64,6 +67,70 @@
 
 .player .img img {
   width: 100%;
+}
+
+/* Pricing Section Style */
+.pricing {
+  margin-top: 150px;
+}
+.pricing h3 {
+  margin-bottom: 30px;
+  text-align: center;
+}
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.card {
+  height: 400px;
+  width: 300px;
+  padding: 120px 20px;
+  background-color: rgb(223, 222, 222);
+  color: black;
+  border-radius: 5px;
+  margin-right: 20px;
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+}
+
+.card:nth-child(2) {
+  background-image: linear-gradient(#b8b3ff, #1100ff);
+  color: white;
+  height: 500px;
+  width: 350px;
+}
+.card:nth-child(2) p {
+  color: white;
+}
+.card:nth-child(2) i {
+  color: white;
+}
+
+.card h4 {
+  font-size: 22px;
+  margin-bottom: 20px;
+}
+
+.card hr {
+  background-color: black;
+}
+
+.card i {
+  color: black;
+}
+.card p {
+  color: black;
+  opacity: 1;
+}
+
+.card button {
+  margin-top: 20px;
+}
+
+.card button i {
+  color: white;
 }
 
 /* Footer Styles */
