--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ main {
 }
 @media only screen and (max-width: 992px) {
   .container {
-    width: 100%;
+    width: 90%;
   }
 }
 /* Hero Section Style */
@@ -25,7 +25,6 @@ main {
   height: 600px;
   align-items: center;
   padding: 0 150px;
-  flex-wrap: wrap;
 }
 
 .hero:hover img {
@@ -84,7 +83,7 @@ main {
 }
 .card {
   height: 400px;
-  width: 300px;
+  width: 310px;
   padding: 120px 20px;
   background-color: rgb(223, 222, 222);
   color: black;
@@ -93,6 +92,11 @@ main {
   justify-content: center;
   display: flex;
   flex-direction: column;
+  transition: all 300ms ease;
+}
+
+.card:hover {
+  height: 420px;
 }
 
 .card:nth-child(2) {
@@ -101,6 +105,14 @@ main {
   height: 500px;
   width: 350px;
 }
+.card:nth-child(2):hover {
+  height: 520px;
+}
+
+.card:nth-child(2) hr {
+  border: 1px solid white;
+}
+
 .card:nth-child(2) p {
   color: white;
 }
@@ -113,12 +125,9 @@ main {
   margin-bottom: 20px;
 }
 
-.card hr {
-  background-color: black;
-}
-
 .card i {
   color: black;
+  margin-right: 10px;
 }
 .card p {
   color: black;
@@ -131,6 +140,23 @@ main {
 
 .card button i {
   color: white;
+}
+/* News Letter Section Styles */
+.news-letter {
+  text-align: center;
+  margin-top: 200px;
+  padding: 2rem 0;
+  width: 100%;
+  background-image: linear-gradient(tomato, lightsalmon);
+}
+
+.news-letter h4 {
+  font-size: 25px;
+  color: white;
+}
+
+.news-letter a {
+  color: rgb(0, 68, 255);
 }
 
 /* Footer Styles */
@@ -146,8 +172,6 @@ footer {
 .footer-img img {
   width: 483.87px;
   height: 110px;
-  left: 0px;
-  top: 0px;
 }
 
 .footer-details .icons i {
@@ -156,8 +180,129 @@ footer {
   padding: 10px;
   border-radius: 50%;
   margin-bottom: 20px;
+  transition: all 300ms ease;
+}
+
+.footer-details .icons i:hover {
+  color: #5f6269;
 }
 
 .copyright span {
   font-size: 18px;
 }
+
+/* --------------------------
+      Media Queries 
+----------------------------*/
+
+/* Mobile */
+@media only screen and (max-width: 688px) {
+  /* Hero Section Styles */
+  button {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: clip;
+  }
+  .hero {
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
+    align-items: flex-start;
+    height: 800px;
+    width: 100%;
+  }
+  .hero:hover img {
+    transform: translateX(none);
+  }
+  .hero h1 {
+    width: 100%;
+  }
+  .hero h1,
+  button {
+    margin-top: 20px;
+    margin-left: 20px;
+  }
+  .hero button {
+    margin-bottom: 50px;
+    padding-left: 55px;
+    padding-right: 50px;
+  }
+
+  .hero img {
+    width: 160%;
+    margin: 0 auto;
+  }
+  .players {
+    grid-template-columns: 1fr;
+  }
+  .player {
+    width: 100%;
+  }
+  .pricing h3 {
+    font-size: 18px;
+  }
+
+  .cards {
+    align-items: center;
+  }
+
+  .pricing .cards:nth-child(1),
+  :nth-child(3) {
+    padding-bottom: 100px;
+  }
+  .card {
+    margin: 0 auto;
+    width: 100%;
+  }
+  .card button {
+    padding-bottom: 30px;
+  }
+  .card:nth-child(2) {
+    width: 100%;
+  }
+
+  .news-letter {
+    padding: 1rem 0;
+  }
+  .news-letter h4 {
+    font-size: 20px;
+  }
+  footer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .footer-img img {
+    width: 90%;
+  }
+}
+
+@media only screen and (min-width: 689px) and (max-width: 992px) {
+  .hero {
+    flex-direction: column;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    height: 800px;
+  }
+  .hero button {
+    margin-bottom: 50px;
+  }
+
+  .hero .img {
+    width: 200%;
+  }
+  .players {
+    grid-template-columns: 1fr 1fr;
+    margin: 0;
+  }
+  .cards {
+    justify-content: center;
+  }
+  .card{
+    margin-bottom: 20px;
+  }
+  .card:nth-child(2){
+    height: 400px;
+  width: 310px;
+  }
