--- a/css/style.css
+++ b/css/style.css
@@ -300,7 +300,7 @@ footer {
     justify-content: center;
   }
   .card{
-    margin-bottom: 20px;
+    margin-bottom: 20px;g
   }
   .card:nth-child(2){
     height: 400px;
