--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 /* Variables Import */
-@import "./_variables.css";
+@import "_variables.css";
 
 /* Font */
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap");
