--- a/css/style.css
+++ b/css/style.css
@@ -359,18 +359,23 @@ footer {
 
 @media only screen and (min-width: 689px) and (max-width: 992px) {
   .hero {
-    flex-direction: column;
     width: 100%;
     padding: 0;
     margin: 0;
     height: 800px;
+    margin-bottom: 50px;
+  }
+  .hero h1{
+    width: 50%;
+    margin-left: 20px;
   }
   .hero button {
     margin-bottom: 50px;
+    margin-left: 20px;
   }
 
   .hero img {
-    width: 400px;
+    width: 350px;
   }
   .players {
     grid-template-columns: 1fr 1fr;
