--- a/css/style.css
+++ b/css/style.css
@@ -77,10 +77,10 @@ button {
 }
 button i {
   margin-left: 5px;
+  transition: all 300ms ease;
 }
 
 button:hover i {
-  transition: 300ms;
   margin-left: 15px;
 }
 
@@ -108,9 +108,12 @@ main {
   padding: 0 150px;
 }
 
+.hero img{
+  transition: all 500ms ease;
+}
+
 .hero:hover img {
   transform: translateX(20px);
-  transition: transform 500ms ease;
 }
 
 .hero h1 {
